@startuml
title Диаграмма классов предметной области — Садовый инвентарь

skinparam classFontSize 12
skinparam classAttributeIconSize 0
skinparam ArrowColor #444444
skinparam classBorderColor #666666
skinparam classBackgroundColor #fafafa
skinparam nodesep 60
skinparam ranksep 70

class Category {
  +id : INT
  +name : VARCHAR(100)
}

class Tool {
  +id : INT
  +name : VARCHAR(150)
  +quantity : INT
  +condition : ENUM
  +purchase_date : DATE
  +price : DECIMAL(10,2)
  +description : TEXT
  +created_at : TIMESTAMP
}

class ToolImage {
  +id : INT
  +filename : VARCHAR(255)
  +created_at : TIMESTAMP
}

class User {
  +id : INT
  +username : VARCHAR(50)
  +password : VARCHAR(255)
  +role : ENUM
  +is_super_admin : BOOLEAN
  +first_name : VARCHAR(100)
  +last_name : VARCHAR(100)
  +department : VARCHAR(100)
  +phone : VARCHAR(20)
  +created_at : TIMESTAMP
}

class Booking {
  +id : INT
  +quantity : INT
  +status : ENUM
  +note : TEXT
  +created_at : TIMESTAMP
  +updated_at : TIMESTAMP
}

' Category (1) → Tool (0..*): агрегация (ON DELETE SET NULL)
Category "1" o-- "0..*" Tool : содержит

' Tool (1) → ToolImage (0..*): композиция (ON DELETE CASCADE)
Tool "1" *-- "0..*" ToolImage : имеет

' User (1) → Booking (0..*): ассоциация (ON DELETE CASCADE)
User "1" --> "0..*" Booking : создаёт

' Tool (1) → Booking (0..*): ассоциация (ON DELETE CASCADE)
Tool "1" --> "0..*" Booking : входит в

@enduml
